--- a/Omega.Ticket.Presentation.Api/Omega.Ticket.Presentation.Api.csproj
+++ b/Omega.Ticket.Presentation.Api/Omega.Ticket.Presentation.Api.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Omega.Ticket.Core.Application\Omega.Ticket.Core.Application.csproj" />
     <ProjectReference Include="..\Omega.Ticket.Infraestructure\Omega.Ticket.Infraestructure.csproj" />
+    <ProjectReference Include="..\Omega.Ticket.Transversal\Omega.Ticket.Transversal.csproj" />
   </ItemGroup>
 
 
