auth: login and register

--- a/Omega.Ticket.Presentation.Api/appsettings.json
+++ b/Omega.Ticket.Presentation.Api/appsettings.json
@@ -9,5 +9,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "OmegaTicket": "Server=DESKTOP-QOCLJLS;Database=OmegaTicket;User Id=sa;password=sql;Trusted_Connection=False;MultipleActiveResultSets=true;"
-  }
+  },
+  "AppSettings": {
+    "SecretKey": "fwefwef2323244343%$&%&//&REGREGRGREGREwedefwefwE434"
+  } 
 }
