--- a/Omega.Ticket.Core.Application/Omega.Ticket.Core.Application.csproj
+++ b/Omega.Ticket.Core.Application/Omega.Ticket.Core.Application.csproj
@@ -5,7 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.9.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.9.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Omega.Ticket.Core.Domain\Omega.Ticket.Core.Domain.csproj" />
+    <ProjectReference Include="..\Omega.Ticket.Transversal\Omega.Ticket.Transversal.csproj" />
   </ItemGroup>
 
 </Project>
